womtool/src/test/resources/validate/wdl_draft3/invalid/nested_imports_with_bad_input/import_layer_1.wdl
version draft-3

import "import_layer_2.wdl"

struct OuterStruct {
  InnerStruct is
}
